# webtypes

./: README.md  conf.py  pyproject.toml  setup.py  test_wtypes.ipynb  webtypes.ipynb  webtypes.py  wtypes.ipynb  wtypes.py
.github/workflows/: main.yml
wtypes/: __init__.py  _spec.py  base.py  combining_types.py  conf.py  dataclass.py  evented.py  examples.py  python_types.py  rdf.py  spec.py  string_formats.py  validate.py  validation.py  widgets.py  wtypes.py
wtypes/tests/: test_dispatch.ipynb  test_examples.ipynb  test_wtypes.ipynb
